--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -24,6 +24,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Javascript">Javascript</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -34,7 +37,6 @@
             @RenderBody()
         </main>
     </div>
-
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2021 - TDPC12_ASPNETCore3._1WebAppMVC - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
