--- a/Views/Home/PersonByID.cshtml
+++ b/Views/Home/PersonByID.cshtml
@@ -5,7 +5,7 @@
         <td>Cognome</td>
     </tr>
     <tr>
-        <td>@Model.Nome</td>
-        <td>@Model.Cognome</td>
+        <td>@Model.Firstname</td>
+        <td>@Model.Lastname</td>
     </tr>
 </table>
