--- a/Views/Home/PersonsWithFilter.cshtml
+++ b/Views/Home/PersonsWithFilter.cshtml
@@ -8,8 +8,8 @@
     @foreach (PersonModel p in Model)
     {
         <tr>
-            <td>@p.Nome</td>
-            <td>@p.Cognome</td>
+            <td>@p.Firstname</td>
+            <td>@p.Lastname</td>
         </tr>
     }
 </table>
