Added form POST

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,3 +6,10 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+
+<form method="post" asp-controller="Login" asp-action="Test" >
+    <input name="firstname" />
+    <input name="lastname" />
+
+    <input type="submit" value="INVIA" />
+</form>
