--- a/Views/Home/Javascript.cshtml
+++ b/Views/Home/Javascript.cshtml
@@ -3,6 +3,21 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Test Javascript</h1>
-    <button class="btn btn-primary" onclick="ajaxCall()">Click</button>
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <h1 class="display-4">Test Javascript Post Person</h1>
+                <button class="btn btn-primary" onclick="ajaxCallPerson()">Ajax Call Person</button>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <h1 class="display-4">Test Javascript Get Lista Stringhe</h1>
+                <button class="btn btn-primary" onclick="ajaxCallListaStringhe()">Ajax Call Lista Stringhe</button>
+                <div id="resultDiv"></div>
+            </div>
+        </div>
+    </div>
 </div>
