--- a/Views/Home/Javascript.cshtml
+++ b/Views/Home/Javascript.cshtml
@@ -6,7 +6,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <h1 class="display-4">Test Javascript Post Person</h1>
+                <h3 class="display-4">Test Javascript Post Person</h3>
                 <button class="btn btn-primary" onclick="ajaxCallPerson()">Ajax Call Person</button>
             </div>
         </div>
@@ -14,9 +14,23 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <h1 class="display-4">Test Javascript Get Lista Stringhe</h1>
+                <h3 class="display-4">Test Javascript Get Lista Stringhe</h3>
                 <button class="btn btn-primary" onclick="ajaxCallListaStringhe()">Ajax Call Lista Stringhe</button>
                 <div id="resultDiv"></div>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <h3 class="display-4">Test Javascript Dropdown value</h3>
+                <select id="DDLValue">
+                    <option value="0">0</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                </select>
+                <button class="btn btn-primary" onclick="ajaxCallDDLValue()">Ajax Call Dropdown value</button>
+                <div id="resultDivDDLValue"></div>
             </div>
         </div>
     </div>
